# igniter-lab

./: .gitignore  .rgignore  MAP.md  README.md  SEARCH.md  igniter-lab-value-transfer.md
frame-ui/igniter-console/: .gitignore  Cargo.toml  README.md
frame-ui/igniter-console/src/: lib.rs  wasm.rs
frame-ui/igniter-console/tests/: console_action_lineage_tests.rs  console_diff_highlight_tests.rs  console_tests.rs  frame_binding_console_e2e_tests.rs
frame-ui/igniter-render-html/: Cargo.toml
frame-ui/igniter-render-html/src/: lib.rs
frame-ui/igniter-ui-kit/: Cargo.toml
igniter-3d/: .gitignore  Cargo.toml
igniter-3d/examples/: cube_digests.rs
igniter-3d/src/: lib.rs
igniter-3d/tests/: cube3d_tests.rs
igniter-3d/web/: build.sh
igniter-frame/: Cargo.toml  README.md
igniter-frame/examples/: render_demo.rs
igniter-frame/src/: host.rs  lib.rs  machine_source.rs  runtime.rs  wasm.rs
igniter-frame/tests/: frame_input_loop_tests.rs  wasm_runtime_tests.rs
igniter-frame/web/: index.html
igniter-gui/: .gitignore  Cargo.toml
igniter-gui/src/: wasm.rs
igniter-gui/web/: build.sh
igniter-machine/: Cargo.toml  IMPLEMENTED_SURFACE.md  PROP-042.md  README.md  test_ruby_bindings.rb
igniter-machine/src/: backend.rs  bridge.rs  bridge_effect.rs  capability.rs  capsule.rs  clock.rs  coordination.rs  correlation.rs  errors.rs  executors.rs  ffi.rs  frame_binding.rs  frame_binding_effect.rs  http.rs  ingress.rs  lib.rs  machine.rs  observability.rs  orchestrator.rs  postgres_real.rs  postgres_write.rs  reconcile.rs  registry.rs  retry_queue.rs  secrets.rs  service_loop.rs  serving_loop.rs  sparkcrm.rs  wal.rs  write.rs
igniter-machine/tests/: capability_io_atomic_tests.rs  capability_io_authority_tests.rs  capability_io_bridge_tests.rs  capability_io_clock_tests.rs  capability_io_compensation_tests.rs  capability_io_correlation_tests.rs  capability_io_host_tests.rs  capability_io_http_external_tests.rs  capability_io_http_loopback_tests.rs  capability_io_http_tests.rs  capability_io_http_tls_tests.rs  capability_io_load_tests.rs  capability_io_observability_tests.rs  capability_io_orchestrator_tests.rs  capability_io_real_tests.rs  capability_io_recovery_tests.rs  capability_io_retry_queue_tests.rs  capability_io_retry_tests.rs  capability_io_secrets_tests.rs  capability_io_signed_passport_tests.rs  capability_io_sparkcrm_tests.rs  capability_io_tests.rs  capability_io_write_real_tests.rs  coordination_messenger_tests.rs  coordination_pools_tests.rs  coordination_recipe_tests.rs  coordination_transfer_tests.rs  frame_binding_console_e2e_tests.rs  frame_binding_effect_tests.rs  frame_binding_tests.rs  machine_tests.rs  postgres_read_tests.rs  postgres_real_read_tests.rs  postgres_real_write_tests.rs  postgres_reconcile_tests.rs  relational_queryplan_bridge_tests.rs  repl_headless_smoke_tests.rs  service_bridge_replica_tests.rs  service_http_ingress_tests.rs  service_ingress_duplicate_policy_tests.rs  (+9 more)
igniter-server/: Cargo.toml  README.md
igniter-server/examples/: server_app_basic.rs  server_app_runner.rs
igniter-server/src/: effect_host.rs  fixture.rs  host.rs  lib.rs  middleware.rs  protocol.rs  reload.rs  sparkcrm.rs  sparkcrm_payloads.rs
igniter-server/tests/: app_runner_example_tests.rs  effect_machine_tests.rs  example_app_tests.rs  igweb_adapter_tests.rs  igweb_builder_tests.rs  loopback_tests.rs  middleware_tests.rs  sparkcrm_app_tests.rs  sparkcrm_shadow_tests.rs
igniter-stdlib/: Cargo.toml  README.md
igniter-stdlib/proofs/: experimental_io_stdlib_candidate_proof.rb  stdlib_candidate_proof.rb
igniter-stdlib/src/: collections.rs  decimal.rs  io.rs  lib.rs  temporal.rs
igniter-stdlib/stdlib/: io.ig  math.ig  random.ig  regexp.ig  temporal.ig
igniter-stdlib/tests/: regexp_engine_proof_tests.rs
igniter-tbackend/: .gitignore  Cargo.toml  README.md  bench.rb  demo_server.rb  docker-compose.quickstart.yml  run_server.rb  tbackend.config.json  tbackend_repl.rb  tbackend_ruby_extension.rb  tbackend_service.rb  test_suite.rb  verify_compiler_integration.rb  verify_cross_store.rb  verify_diagnostics.rb  verify_mcp.rb  verify_mesh.rb  verify_pipeline.rb  verify_snapshot.rb  verify_trigger.rb
igniter-tbackend/docs/: deployment.md  tbackend-onboarding.md  tbackend-team-quickstart.md  technical_architecture.md
igniter-tbackend/packaging/: README-quickstart.md  postinstall.sh  tbackend-dev  tbackend.config.json  tbackend.docker.json
igniter-tbackend/scripts/: build-and-package.sh  build-macos-bundle.sh
igniter-tbackend/src/: kernel.rs  lib.rs  main.rs  pure_core.rs  server.rs  timeline.rs  wal.rs
igniter-vm/: .gitignore  Cargo.toml  IMPLEMENTED_SURFACE.md  README.md
igniter-vm/proofs/: io_passport_static_loader_alignment_hardening.rb  vm_candidate_proof.rb
igniter-vm/src/: compiler.rs  experiment.rs  instructions.rs  lib.rs  main.rs  passport.rs  tbackend.rs  value.rs  vm.rs
igniter-vm/tests/: linalg_mat3_tests.rs  map_lambda_callcontract_parity_tests.rs  primitive_eq_parity_tests.rs  reactive_tests.rs  regexp_runtime_tests.rs  stdlib_float_to_text_tests.rs  stdlib_math_hof_tests.rs  stdlib_math_nbody_tests.rs  stdlib_pad_left_tests.rs  stdlib_to_float_tests.rs  vm_candidate_proof_tests.rs  vm_tests.rs
lang/igniter-compiler/: .gitignore  Cargo.toml  verify_g1_canon_loop.rb  verify_hof_lambda_error_propagation_p2.rb  verify_lab_map_rust_p1.rb  verify_liveness_p2.rb  verify_liveness_p3.rb  verify_liveness_p4.rb  verify_loops.rb  verify_oof_r3.rb  verify_output_type_assignability_p4.rb  verify_rust_loop_body_assignment_p1.rb  verify_rust_typed_compute_binding_p1.rb  verify_stdlib_collection_range_p3.rb  verify_stdlib_is_empty_p4.rb  verify_str_core.rb  verify_t3_numeric_measure.rb
runtime/igniter-tbackend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  tbackend_client.rb  verify_auth.rb  verify_canonical_hash.py  verify_client_reconcile.py  verify_compaction_loss.py  verify_idempotent_write.py  verify_ruby_client_reconcile.rb  verify_snapshot.rb
server/igniter-web/: Cargo.toml  IMPLEMENTED_SURFACE.md  README.md
(+3409 files in other folders)
