[package]
name = "igniter_gui"
version = "0.1.0"
edition = "2021"

# Re-home of the GUI engine's reactive loop over igniter-frame (LAB-FRAME-GUI-ENGINE-REHOME-P8).
# Widgets are world facts; layout is an orthographic LayoutProjector (igniter-frame Projector port);
# hit-test→intent is igniter-frame's box-aware hit_test + derive_intent via FrameRuntime::click; the
# update logic is an IntentReducer; rendering is a GuiRenderHost (igniter-frame RenderHost trait).
# Depends on igniter_frame with `default-features = false` → NO igniter-machine in the core path.

[dependencies]
igniter_frame = { path = "../igniter-frame", default-features = false }
serde = "1.0"
serde_json = "1.0"
blake3 = "1.5"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]
