[package]
name = "igniter_machine"
version = "0.1.0"
edition = "2021"

[lib]
name = "igniter_machine"
crate-type = ["cdylib", "rlib"]

[dependencies]
igniter_compiler = { path = "../igniter-compiler" }
igniter_vm = { path = "../igniter-vm" }
igniter_tbackend_playground = { path = "../igniter-tbackend", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
futures = "0.3"
parking_lot = "0.12"
magnus = { version = "0.7", optional = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
crc32fast = "1"

# TUI (igniter-repl binary only)
ratatui   = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

[features]
default = ["ffi"]
ffi  = ["dep:magnus"]
repl = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name    = "igniter-repl"
path    = "src/bin/repl.rs"
required-features = ["repl"]

[[bin]]
name = "igniter-mcp"
path = "src/bin/mcp.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
