[package]
name = "igniter_machine"
version = "0.1.0"
edition = "2021"

[lib]
name = "igniter_machine"
crate-type = ["cdylib", "rlib"]

[dependencies]
igniter_compiler = { path = "../igniter-compiler" }
igniter_vm = { path = "../igniter-vm" }
igniter_tbackend_playground = { path = "../igniter-tbackend", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
futures = "0.3"
parking_lot = "0.12"
magnus = { version = "0.7", optional = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
crc32fast = "1"

# TUI (igniter-repl binary only)
ratatui   = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# Real TLS transport (LAB-MACHINE-CAPABILITY-HTTP-TLS-P14-IMPL) — opt-in via the `tls` feature so
# the default build stays dep-light. Exact offline-cached versions (precheck verified ring builds
# offline on darwin): rustls 0.21 (ring backend, no separate provider) + tokio-rustls 0.24.
rustls         = { version = "=0.21.12", optional = true }
tokio-rustls   = { version = "=0.24.1", optional = true }
rustls-pemfile = { version = "=1.0.4", optional = true }
# Real local Postgres adapter (LAB-MACHINE-POSTGRES-LOCAL-READ-P6) — opt-in only; the default
# build stays fake-only and DB-dependency-free (the fake P2/P3/P4 adapters are pure Rust).
tokio-postgres = { version = "0.7", optional = true }

[features]
default = ["ffi"]
ffi  = ["dep:magnus"]
repl = ["dep:ratatui", "dep:crossterm"]
tls  = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
postgres = ["dep:tokio-postgres"]

[[bin]]
name    = "igniter-repl"
path    = "src/bin/repl.rs"
required-features = ["repl"]

[[bin]]
name = "igniter-mcp"
path = "src/bin/mcp.rs"

# E2E proof only (LAB-FRAME-BINDING-CONSOLE-E2E-P20): the host-side test drives the binding bridge →
# console (top-of-stack integration). console/ui-kit depend on igniter_frame WITHOUT the `machine`
# feature, so there is no dependency cycle and they stay machine-free. This is a DEV dep only.
[dev-dependencies]
igniter_console = { path = "../igniter-console" }
igniter_ui_kit = { path = "../igniter-ui-kit" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
