[package]
name = "igniter_machine"
version = "0.1.0"
edition = "2021"

[lib]
name = "igniter_machine"
# `rlib` only. The `cdylib` output existed solely for the removed Ruby/magnus FFI extension.
crate-type = ["rlib"]

[dependencies]
igniter_compiler = { path = "../igniter-compiler" }
igniter_vm = { path = "../igniter-vm" }
igniter_tbackend_playground = { path = "../igniter-tbackend", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
futures = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
crc32fast = "1"

# TUI (igniter-repl binary only)
ratatui   = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# Real TLS transport (LAB-MACHINE-CAPABILITY-HTTP-TLS-P14-IMPL) — opt-in via the `tls` feature so
# the default build stays dep-light. Exact offline-cached versions (precheck verified ring builds
# offline on darwin): rustls 0.21 (ring backend, no separate provider) + tokio-rustls 0.24.
rustls         = { version = "=0.21.12", optional = true }
tokio-rustls   = { version = "=0.24.1", optional = true }
rustls-pemfile = { version = "=1.0.4", optional = true }
# Real local Postgres adapter (LAB-MACHINE-POSTGRES-LOCAL-READ-P6) — opt-in only; the default
# build stays fake-only and DB-dependency-free (the fake P2/P3/P4 adapters are pure Rust).
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1"] }

[features]
# Default build is the pure machine (no Ruby FFI — removed 2026-06-17 as a dead rudiment).
default = []
repl = ["dep:ratatui", "dep:crossterm"]
tls  = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
postgres = ["dep:tokio-postgres"]

[[bin]]
name    = "igniter-repl"
path    = "src/bin/repl.rs"
required-features = ["repl"]

[[bin]]
name = "igniter-mcp"
path = "src/bin/mcp.rs"

# No [dev-dependencies]: the frame-binding console E2E proof (LAB-FRAME-BINDING-CONSOLE-E2E-P20) moved
# to frame-ui/igniter-console/tests/ (LAB-IGNITER-MIRROR-MACHINE-DEVDEP-RECONCILE-P3) — igniter_machine
# carries zero frame-ui edges, so a pure-core mirror checkout (no frame-ui/ sibling) builds and tests
# clean. frame_binding.rs / frame_binding_effect.rs are machine-internal bridge code with no frame-ui
# Cargo dependency; their unit tests (frame_binding_tests.rs, frame_binding_effect_tests.rs) stay here.

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
