[package]
name = "igniter_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The default build is PROTOCOL-ONLY and stays machine-free (serde only): protocol.rs, host.rs,
# fixture.rs, and the loopback binary never touch `igniter-machine`. The `machine` feature is the ONLY
# thing that pulls the machine + a tokio runtime in — it gates `effect_host.rs`, where the server
# protocol's `InvokeEffect` is executed through the proven `igniter-machine` wire-to-effect contour
# (LAB-MACHINE-IGNITER-SERVER-EFFECT-P3). This keeps protocol consumers from depending on the kernel.
igniter_machine = { path = "../igniter-machine", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
machine = ["dep:igniter_machine", "dep:tokio"]

[dev-dependencies]
serde_json = "1.0"
# LAB-IGNITER-WEB-ROUTING-ADAPTER-P5: test-only — the IgWeb adapter proof lowers `.igweb` via
# `igniter_compiler::igweb::lower_igweb` and runs the generated `.ig` through `igniter_machine`
# (the `machine` feature). DEV-only: the default server build stays machine-free (serde only).
igniter_compiler = { path = "../igniter-compiler" }
