[package]
# Historical crate/package name kept for compatibility with existing Rust and
# Ruby FFI callers. The user-facing daemon is `tbackend`; current docs should
# treat it as an implemented preview daemon / shadow-ready candidate. A future
# crate rename is a separate compatibility card.
name = "igniter_tbackend_playground"
version = "0.1.0"
edition = "2021"

[lib]
# Same compatibility note as `[package].name`: do not infer current status from
# the legacy `_playground` library symbol.
name = "igniter_tbackend_playground"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tbackend"
path = "src/main.rs"


# LAB-TBACKEND-FEATURE-SPLIT-P2: the daemon is pure Rust by default; the Ruby/Magnus FFI adapter is opt-in
# (`--features ffi`). Operators build `cargo build --release --bin tbackend` with no flags.
[features]
default = []
ffi = ["dep:magnus"]

[dependencies]
magnus = { version = "0.7", optional = true }
blake3 = "1.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
ctrlc = "3.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
