[package]
name = "igniter_tbackend_playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "igniter_tbackend_playground"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tbackend"
path = "src/main.rs"


[features]
default = ["ffi"]
ffi = ["dep:magnus"]

[dependencies]
magnus = { version = "0.7", optional = true }
blake3 = "1.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
ctrlc = "3.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
