[package]
name = "igniter_web"
version = "0.1.0"
edition = "2021"

[lib]
# `igniter-web` has no doctest examples; coverage lives in the focused integration suites below.
# Keep plain `cargo test --features machine` on the integration path instead of rustdoc path-dep setup.
doctest = false

# Lab home for the IgWeb package builder (LAB-IGNITER-WEB-CRATE-P8). Owns `build_igweb_app`: lower
# `.igweb` (igniter_compiler) → load the generated `.ig` (igniter_machine) → an erased
# `Arc<dyn igniter_server::protocol::ServerApp>`. This crate carries the compiler+machine weight so
# `igniter-server` stays domain/dialect-agnostic and serde-only by default. It owns NO routing table,
# NO effect authority, NO serving loop/sockets. Not canon; lab-only.
[dependencies]
igniter_server = { path = "../igniter-server" }
igniter_compiler = { path = "../../igniter-compiler" }
igniter_machine = { path = "../../igniter-machine" }
# Needed for IntentBridgeExecutor in host_binding.rs under --features postgres (P26).
async-trait = "0.1"
# Host-minted Todo surrogate id recipe (LAB-TODOAPP-API-HOST-SURROGATE-ID-P36): a deterministic,
# replay-safe opaque digest of (method, path, idempotency_key). Same crate already in the workspace via
# igniter-machine; the recipe is HOST policy, so it lives here, not in generic machine code.
blake3 = "1.5"
# Render decision (LAB-IGNITER-WEB-RENDER-DECISION-P16): ViewArtifact JSON → HTML via the P3 projector.
# igniter-web carries the renderer weight so igniter-server core stays renderer/view-free.
igniter_render_html = { path = "../../frame-ui/igniter-render-html" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Opt-in local-Postgres integration harness only (LAB-TODOAPP-API-LOCAL-POSTGRES-P8). Optional — the
# default build never links it; pulled in only by the `postgres` feature for the gated e2e test's
# test-owned DDL/seed/cleanup.
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1"] }

[features]
# Opt-in machine-backed effect execution for proof harnesses (LAB-IGNITER-WEB-EFFECT-HOST-WRITE-P4).
# Passes through to igniter-server's `machine` feature (exposes `effect_host` + `serve_*_effect`). The
# DEFAULT build is unchanged — `igweb-serve` and the app builder stay observed/machine-free.
machine = ["igniter_server/machine"]
# Opt-in LOCAL-Postgres e2e (LAB-TODOAPP-API-LOCAL-POSTGRES-P8). Forwards to igniter-machine's real
# adapters and pulls in tokio-postgres for the test-owned DDL/seed/cleanup. Used ONLY by
# `tests/todo_postgres_local_e2e_tests.rs`, which SKIPS cleanly when `IGNITER_TODO_PG_DSN` is unset.
postgres = ["machine", "igniter_machine/postgres", "dep:tokio-postgres"]

[dev-dependencies]
